fix slight issues in about page

--- a/public/about.html
+++ b/public/about.html
@@ -242,12 +242,12 @@
                     </div>
                 </div>
                 <!--full-time or part-time, working interval-->
-                <div class="hidden sm:flex flex-col items-center gap-y-1.5">
+                <div class="hidden sm:flex flex-col items-end gap-y-1.5">
                     <!--full-time or part-time-->
-                    <div class="w-max sm:w-full px-4 py-1 sm:py-2 sm:px-6 rounded-full bg-lightGreen dark:bg-dark border border-lightGreen dark:border-green flex justify-center items-center">
-                    <span class="font-poppins700 text-xs sm:text-sm text-green">
-                        Full Time
-                    </span>
+                    <div class="w-max px-4 py-1 sm:py-2 sm:px-6 rounded-full bg-lightGreen dark:bg-dark border border-lightGreen dark:border-green flex justify-center items-center">
+                        <span class="font-poppins700 text-xs sm:text-sm text-green">
+                            Full Time
+                        </span>
                     </div>
                     <!--working interval-->
                     <div class="flex gap-x-1 items-center">
@@ -308,9 +308,9 @@
                     </div>
                 </div>
                 <!--full-time or part-time, working interval-->
-                <div class="hidden sm:flex flex-col items-center gap-y-1.5">
+                <div class="hidden sm:flex flex-col items-end gap-y-1.5">
                     <!--full-time or part-time-->
-                    <div class="w-max sm:w-full px-4 py-1 sm:py-2 sm:px-6 rounded-full bg-lightGreen dark:bg-dark border border-lightGreen dark:border-green flex justify-center items-center">
+                    <div class="w-max px-4 py-1 sm:py-2 sm:px-6 rounded-full bg-lightGreen dark:bg-dark border border-lightGreen dark:border-green flex justify-center items-center">
                     <span class="font-poppins700 text-xs sm:text-sm text-green">
                         Full Time
                     </span>
@@ -368,9 +368,9 @@
                     </div>
                 </div>
                 <!--full-time or part-time, working interval-->
-                <div class="hidden sm:flex flex-col items-center gap-y-1.5">
+                <div class="hidden sm:flex flex-col items-end gap-y-1.5">
                     <!--full-time or part-time-->
-                    <div class="w-max sm:w-full px-4 py-1 sm:py-2 sm:px-6 rounded-full bg-lightGreen dark:bg-dark border border-lightGreen dark:border-green flex justify-center items-center">
+                    <div class="w-max px-4 py-1 sm:py-2 sm:px-6 rounded-full bg-lightGreen dark:bg-dark border border-lightGreen dark:border-green flex justify-center items-center">
                     <span class="font-poppins700 text-xs sm:text-sm text-green">
                         Full Time
                     </span>
