fix slight issues in pages template and create projects page full responsive dark and light mode

--- a/public/about.html
+++ b/public/about.html
@@ -168,13 +168,13 @@
     </div>
 </header>
 
-<main class="mt-10 sm:mt-16 md:mt-20 lg:mt-28 xl:mt-32 container max-w-[1193px]">
+<main class="mt-10 sm:mt-16 md:mt-20 lg:mt-28 container max-w-[1193px]">
     <div class="container">
         <h2 class="text-purple dark:text-lightGray font-poppins700 text-2xl sm:text-3xl xl:text-[42px]">
             About Me
         </h2>
         <!--about-->
-        <p class="max-w-[700px] mt-2 text-darkGray dark:text-midGray font-poppins400 text-sm sm:text-base xl:text-lg xl:leading-[26px]">
+        <p class="max-w-[700px] mt-6 text-darkGray dark:text-midGray font-poppins400 text-sm sm:text-base xl:text-lg xl:leading-[26px]">
             Aspiring 18-year-old Front-End Developer with entry-level professional experience in the software
             engineering. My ambition is to help companies build their own website using front-end developing languages.
             <br>
