add real infos to tech stack section and projects section

--- a/public/projects.html
+++ b/public/projects.html
@@ -155,28 +155,28 @@
         <p class="max-w-[700px] mt-2 sm:mt-6 text-darkGray dark:text-midGray font-poppins400 text-sm sm:text-base xl:text-lg xl:leading-[26px]">
             Things I've built so far
         </p>
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 grid-rows-2 gap-10 xl:gap-[50px] mt-10 xl:mt-24">
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
-                <img src="./img/project-cover-1.jpg" alt="cover">
-                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
-                        Project Tile Goes Here
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 xl:gap-[50px] mt-10 xl:mt-24">
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards flex flex-col">
+                <img src="./img/projects/sabzlearn.png" alt="Sabzlearn-project-cover" class="h-[235px]">
+                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8 flex-grow flex flex-col">
+                    <h2 class="h-16 font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
+                        Sabzlearn Website
                     </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
-                        This is sample project description random things are here in description This is sample project
-                        lorem ipsum generator for dummy content
+                    <p class="block flex-grow mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
+                        This Project is a duplicate project for <a target="_blank" href="https://sabzlearn.ir" class="text-green">Sabzlearn.ir</a> that is a RESTFULL project with almost all the real website's options. this project has both themes, light and dark.
+                        other than courses admin can publish articles too. you can see full details in GitHub page of the project.
                     </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
+                    <span class="block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
                         Tech Stack:
                         <span class="font-poppins300 xs:text-sm">
-                            Html, JavaScript, Sass, React
+                            Html, TailwindCSS, Vanilla JS
                         </span>
                     </span>
-                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
+                    <div class="mt-5 flex flex-wrap justify-between items-center gap-2">
                         <div class="flex items-center gap-x-2.5">
                             <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
                             <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
-                            <a href="#"
+                            <a target="_blank" href="https://main--amingharibi-sabzlearn.netlify.app"
                                class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
                                 Preview</a>
                         </div>
@@ -184,182 +184,73 @@
                             <svg class="w-5 h-5 fill-black dark:fill-white">
                                 <use href="#github-icon"></use>
                             </svg>
-                            <a href="#"
+                            <a target="_blank" href="https://github.com/Amin-Gharibi/sabzlearn"
                                class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
                                 Code</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
-                <img src="./img/project-cover-1.jpg" alt="cover">
-                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
-                        Project Tile Goes Here
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards flex flex-col">
+                <img src="./img/projects/coffeeshop.png" alt="Sabzlearn-project-cover" class="h-[235px]">
+                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8 flex-grow flex flex-col">
+                    <h2 class="h-16 font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
+                        CoffeeShop Website
                     </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
-                        This is sample project description random things are here in description This is sample project
-                        lorem ipsum generator for dummy content
+                    <p class="block flex-grow mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
+                        This Projects is an exercise project after learning TailwindCSS in which I have used custom variants and custom colors and fonts, dark mode and other things that you can see in the GitHub page of project and the source code.
                     </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
+                    <span class="block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
                         Tech Stack:
                         <span class="font-poppins300 xs:text-sm">
-                            Html, JavaScript, Sass, React
+                            Html, TailwindCSS
                         </span>
                     </span>
-                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
+                    <div class="mt-5 flex flex-wrap justify-between items-center gap-2">
                         <div class="flex items-center gap-x-2.5">
                             <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
                             <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
-                            <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
+                            <a target="_blank" href="https://amin-gharibi.github.io/coffeeshop" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
                                 Preview</a>
                         </div>
                         <div class="flex items-center gap-x-2.5">
                             <svg class="w-5 h-5 fill-black dark:fill-white">
                                 <use href="#github-icon"></use>
                             </svg>
-                            <a href="#"
+                            <a target="_blank" href="https://github.com/Amin-Gharibi/coffeeshop"
                                class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
                                 Code</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
-                <img src="./img/project-cover-1.jpg" alt="cover">
-                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
-                        Project Tile Goes Here
+            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards flex flex-col">
+                <img src="./img/projects/sass-project.png" alt="Sabzlearn-project-cover" class="h-[235px]">
+                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8 flex-grow flex flex-col">
+                    <h2 class="h-16 font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
+                        Sample Company Website
                     </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
-                        This is sample project description random things are here in description This is sample project
-                        lorem ipsum generator for dummy content
+                    <p class="block flex-grow mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
+                        This Project is an exercise project after learning SCSS and SASS in which I have tried my best to use as many as possible feature of scss, with both light and dark mode. you can see more details in GitHub page of the project.
                     </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
+                    <span class="block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
                         Tech Stack:
                         <span class="font-poppins300 xs:text-sm">
-                            Html, JavaScript, Sass, React
+                            Html, Scss
                         </span>
                     </span>
-                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
+                    <div class="mt-5 flex flex-wrap justify-between items-center gap-2">
                         <div class="flex items-center gap-x-2.5">
                             <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
                             <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
-                            <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
+                            <a target="_blank" href="https://amin-gharibi.github.io/scss-project" class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
                                 Preview</a>
                         </div>
                         <div class="flex items-center gap-x-2.5">
                             <svg class="w-5 h-5 fill-black dark:fill-white">
                                 <use href="#github-icon"></use>
                             </svg>
-                            <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
-                                Code</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
-                <img src="./img/project-cover-1.jpg" alt="cover">
-                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
-                        Project Tile Goes Here
-                    </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
-                        This is sample project description random things are here in description This is sample project
-                        lorem ipsum generator for dummy content
-                    </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
-                        Tech Stack:
-                        <span class="font-poppins300 xs:text-sm">
-                            Html, JavaScript, Sass, React
-                        </span>
-                    </span>
-                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
-                        <div class="flex items-center gap-x-2.5">
-                            <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
-                            <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
-                            <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
-                                Preview</a>
-                        </div>
-                        <div class="flex items-center gap-x-2.5">
-                            <svg class="w-5 h-5 fill-black dark:fill-white">
-                                <use href="#github-icon"></use>
-                            </svg>
-                            <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
-                                Code</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
-                <img src="./img/project-cover-1.jpg" alt="cover">
-                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
-                        Project Tile Goes Here
-                    </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
-                        This is sample project description random things are here in description This is sample project
-                        lorem ipsum generator for dummy content
-                    </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
-                        Tech Stack:
-                        <span class="font-poppins300 xs:text-sm">
-                            Html, JavaScript, Sass, React
-                        </span>
-                    </span>
-                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
-                        <div class="flex items-center gap-x-2.5">
-                            <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
-                            <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
-                            <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
-                                Preview</a>
-                        </div>
-                        <div class="flex items-center gap-x-2.5">
-                            <svg class="w-5 h-5 fill-black dark:fill-white">
-                                <use href="#github-icon"></use>
-                            </svg>
-                            <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
-                                Code</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="rounded-2xl overflow-hidden shadow-custom-shadow dark:bg-darkCards">
-                <img src="./img/project-cover-1.jpg" alt="cover">
-                <div class="px-4 py-5 xs:px-5 xs:py-7 sm:px-8">
-                    <h2 class="font-poppins500 text-xl xs:text-2xl sm:text-[28px] text-black dark:text-lightGray">
-                        Project Tile Goes Here
-                    </h2>
-                    <p class="mt-4 font-poppins300 text-sm xs:text-base sm:text-lg text-darkGray dark:text-lightGray">
-                        This is sample project description random things are here in description This is sample project
-                        lorem ipsum generator for dummy content
-                    </p>
-                    <span class="inline-block mt-3 font-poppins400 text-xs xs:text-sm sm:text-base text-purple dark:text-lightGray">
-                        Tech Stack:
-                        <span class="font-poppins300 xs:text-sm">
-                            Html, JavaScript, Sass, React
-                        </span>
-                    </span>
-                    <div class="mt-3 xs:mt-5 flex flex-wrap justify-between items-center gap-2">
-                        <div class="flex items-center gap-x-2.5">
-                            <img src="./img/icons/chain-icon.svg" alt="chain-icon" class="block dark:hidden">
-                            <img src="./img/icons/chain-icon-dark.svg" alt="chain-icon" class="hidden dark:block">
-                            <a href="#"
-                               class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">Link
-                                Preview</a>
-                        </div>
-                        <div class="flex items-center gap-x-2.5">
-                            <svg class="w-5 h-5 fill-black dark:fill-white">
-                                <use href="#github-icon"></use>
-                            </svg>
-                            <a href="#"
+                            <a target="_blank" href="https://github.com/Amin-Gharibi/scss-project"
                                class="font-poppins400 text-sm xs:text-base underline underline-offset-2 text-black dark:text-white">View
                                 Code</a>
                         </div>
