--- a/public/tech-stack.html
+++ b/public/tech-stack.html
@@ -160,6 +160,7 @@
             <img class="w-16 h-16 sm:w-24 sm:h-24 md:w-32 md:h-32" src="https://skillicons.dev/icons?i=javascript" title="JavaScript" alt="JavaScript"/>
             <img class="w-16 h-16 sm:w-24 sm:h-24 md:w-32 md:h-32" src="https://skillicons.dev/icons?i=tailwindcss" title="TailwindCss" alt="TailwindCss"/>
             <img class="w-16 h-16 sm:w-24 sm:h-24 md:w-32 md:h-32" src="https://skillicons.dev/icons?i=bootstrap" title="Bootstrap" alt="Bootstrap"/>
+            <img class="w-16 h-16 sm:w-24 sm:h-24 md:w-32 md:h-32" src="https://skillicons.dev/icons?i=scss" alt="SCSS" title="SCSS"/>
             <img class="w-16 h-16 sm:w-24 sm:h-24 md:w-32 md:h-32" src="https://skillicons.dev/icons?i=git" title="Git" alt="Git"/>
             <img class="w-16 h-16 sm:w-24 sm:h-24 md:w-32 md:h-32" src="https://skillicons.dev/icons?i=npm" title="NPM" alt="NPM"/>
             <img class="w-16 h-16 sm:w-24 sm:h-24 md:w-32 md:h-32" src="https://skillicons.dev/icons?i=regex" title="RegEx" alt="RegEx"/>
